fixing header spacing

--- a/app/assets/stylesheets/style_framework.css.scss
+++ b/app/assets/stylesheets/style_framework.css.scss
@@ -298,7 +298,7 @@ section {
 }
 /* HEADINGS */
 .display-header {
-    padding-top: 80px;
+    padding-top: 40px;
     padding-left: 6vw;
     padding-right: 6vw;
     letter-spacing: 10px;
